<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HiggsBot RoboDroid</string>
    <string name="action_settings">Settings</string>
    <string name="play_button">Play Test</string>
    <string name="driver_ip_label">Driver IP</string>
    <string name="ip_hint">Enter IP Address</string>
    <string name="arm_ctrl_ip_label">Arm Control IP</string>
    <string name="snitch_color_label">Snitch Color</string>
    <string-array name="snitch_colors">
        <item >Red</item>
        <item >Black</item>
    </string-array>
    <string name="start_button_label">Start Higgs!</string>

    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="start_server">Start server</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="start_driver">Start Driver</string>
    <string name="start_arm_control">Start Arm Control</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found.</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="display_group_info">Display group info</string>
</resources>
